--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@top-gg/sdk": "^3.0.9",
     "axios": "^0.21.1",
     "discord.js": "^12.5.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "topgg-autoposter": "^1.1.9"
   }
 }
